--- a/capstoneproject1/dental/style.css
+++ b/capstoneproject1/dental/style.css
@@ -6,7 +6,7 @@
 .head{
 	height: 1000px;
 	width: 100%;
-	background-image: url("doctor.jpg");
+	background-image: url("images/doctor.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
